--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,25 @@
 a {
   text-decoration: none;
 }
+blockquote {
+  margin: 0;
+  padding: 0;
+}
+#wrap{
+  width:100%;
+overflow-x:hidden;
+}
 /* Header Top */
 .header-top {
-  width: 100%;
+  position: absolute;
+  /* width: 100%; */
   color: #fff;
   background-color: #081535;
   padding: 52px 0;
   display: flex;
   align-items: center;
   overflow: hidden;
-  justify-content: center;
+  z-index: 100;
 }
 .header-top__divider {
   flex: auto;
@@ -33,6 +42,7 @@ a {
 }
 .header-top .nav__list {
   display: flex;
+  margin-bottom: 0 !important;
 }
 .header-top .nav__list .nav__item {
   margin-right: 24px;
@@ -40,6 +50,7 @@ a {
 .header-top .nav__list .nav__item a {
   color: #fff;
   padding: 16px;
+  text-decoration:none;
 }
 
 /* Left side bar */
@@ -77,8 +88,8 @@ a {
   opacity: 0.3;
   text-decoration-line: none;
 }
-.left-bar__scroll-down span{
-  font-size:15px;
+.left-bar__scroll-down span {
+  font-size: 15px;
   transform: rotate(90deg);
 }
 
@@ -94,7 +105,7 @@ a {
   align-items: center;
   justify-content: space-between;
   height: 100px;
-  background-color: #eae8e6;
+  background-color: hsla(0, 0%, 100%, 0.8);
   padding: 28px 52px;
   backdrop-filter: blur(10px);
 }
@@ -118,6 +129,7 @@ a {
 }
 .sticky-navbar__list {
   display: flex;
+  margin-bottom: 0 !important;
 }
 .sticky-navbar__list-item a {
   color: #0e0e0e;
@@ -126,68 +138,545 @@ a {
   font-size: 14px;
   padding: 5px 0;
   margin: 0px 30px;
+  text-decoration: none;
 }
 
-/* Hero section */
-.hero-section {
+/* Home section */
+.home-section {
   background-color: #081535;
   min-height: 100vh;
   display: flex;
   align-items: center;
   position: relative;
   overflow: hidden;
+  padding: 142px 0 90px 0;
 }
-.hero-section__content {
-  /* flex:1 1 auto; */
-  margin: -200px 200px 0 200px;
-  padding: 0 25px;
+.home-section__content {
+  margin: 0 200px 0 180px;
+  /* padding: 0 25px; */
 }
-.hero-section__text h1 {
+.home-section__text h1 {
   color: #fff;
   font-size: 72px;
   margin-bottom: 32px;
 }
-.hero-section__text p {
+.home-section__text p {
   color: #fff;
   font-size: 28px;
   margin-bottom: 40px;
 }
-.hero-section__text span {
+.home-section__text span {
   color: #f72334;
 }
-.hero-section__btn {
+.section__btn {
   font-size: 16px;
   font-weight: 700;
   border: 2px solid #f72334;
-  padding: 12px 32px;
-  max-width: 176px;
+  padding: 12px 25px 12px 30px;
+  max-width: 165px;
   height: 48px;
 }
-.hero-section__btn a {
+.section__btn a {
   color: #fff;
+  text-decoration: none;
 }
-.hero-section__btn:hover {
+.section__btn-black a{
+  color:#0e0e0e;
+}
+.section__btn:hover {
   cursor: pointer;
 }
-.hero-section__logo {
+.home-section__logo {
   margin-top: 48px;
 }
-.hero-section__logo img {
+.home-section__logo img {
   max-width: 192px;
   height: auto;
 }
 
-/* Media query */
-@media (max-width: 1799px) {
-  .hero-section__text h1 {
-    font-size: 56px;
+/* slide section */
+.slide-content__header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 36px;
+}
+.slide-content__header h2 {
+  font-size: 36.8px;
+  font-weight:600;
+}
+.slider-arrow{
+  display: inline-block;
+}
+.slick-arrow.slick-hidden {
+  display: unset !important;
+}
+.slider-item{
+  height: 300px !important;
+  margin:16px;
+  text-align: center;
+}
+/* .slider-item h3{
+  display: block;
+  margin-top: 64px;
+  font-size: 32px;
+} */
+
+
+/* statistic section */
+.stat-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.stat-content .stat-card{
+  padding-left: 35px;
+  padding-right: 35px;
+}
+.stat-card__icon{
+  margin-bottom: 25px;
+}
+.stat-card__icon span{
+  font-size: 56px;
+  color:#0e0e0e;
+}
+.stat-card__value{
+  font-size: 41.6px;
+    font-weight: 700;
+    color: #f72334;
+}
+.stat-card__text{
+  font-size:16.8px;
+  padding-top: 6.6px;
+}
+
+/* who we are section */
+.left-content{
+  display: flex;
+  align-items: center;
+}
+.left-content__desc{
+  padding-right: 99px;
+}
+.left-content__desc h2{
+  font-size: 34.5px;
+  margin-bottom: 32px;
+  font-weight: 600;
+}
+.left-content__desc p{
+  width: 506px;
+  font-size: 17px;
+  line-height: 1.7;
+  margin-bottom: 24px;
+}
+
+/* Our Strategic Orientation section */
+.right-content{
+  display: flex;
+  align-items: center;
+}
+.right-content__desc{
+  padding-left: 99px;
+}
+.right-content__desc h2{
+  font-size: 34.5px;
+  margin-bottom: 32px;
+  font-weight: 600;
+}
+.right-content__desc p{
+  font-size: 17px;
+  line-height: 1.7;
+  width: 506px;
+  margin-bottom: 24px;
+}
+
+
+
+
+
+/* Quote section */
+.quote-section{
+  margin-top:90px;
+  background-color: #081535;
+  padding: 0;
+  /* height: 441.25px; */
+}
+.quote-container{
+  display: flex;
+  align-items: center;
+}
+.quote-container .quote-img img{
+  width: 440px;
+  display: block;
+  height: 471.27px;
+  margin-top: -30px;
+}
+.quote-content{
+  padding:65px;
+  color:#ffffff;
+}
+.quote-content p{
+  font-size: 24px;
+  line-height: 1.7;
+  margin-bottom: 0 !important;
+  width: 530px;
+}
+.quote-content strong{
+  font-size: 17.6px;
+  display: block;
+}
+.quote-content span{
+  font-size: 14.4px;
+}
+.quote-content footer{
+  line-height: 1.4;
+}
+
+ .quote-icon {
+  font-size: 35px !important;
+  color: #f72334;
+  font-variation-settings:
+  'FILL' 1,
+  'opsz' 48 
+}
+footer .footer-logo img{
+  margin-right: 32px;
+}
+footer .footer-logo .pri{
+  height: 65px;
+}
+
+.footer-nav{
+  margin-top:38.4px;
+  display: inline-block !important;
+}
+.nav-list{
+  display: flex;
+  flex-wrap: wrap;
+  font-weight: 700;
+  font-size: 14.4px;
+  margin: 0;
+  padding:0;
+}
+.nav-list li {
+  padding:16px 0;
+}
+.footer-contact{
+  display: flex;
+}
+
+.item-icon{
+  display: inline-flex;
+    align-items: center;
+    font-size: 14.4px;
+}
+.phone-icon,
+.email-icon {
+  font-size: 18px !important;
+  margin-right:12px;
+  font-variation-settings:
+  'FILL' 1,
+  'opsz' 48 
+}
+.back-scroll{
+  position: absolute;
+  right:3.25rem;
+}
+.back-scroll a{
+  text-decoration: none;
+}
+@media (min-width: 576px){
+  .nav-list li {
+    width: 238px;
+}
+.footer-contact__item{
+  width: 238px;
+}
+}
+.back-scroll {
+  color: #ffffff;
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  letter-spacing: 10px;
+  font-size: 8px;
+  opacity: 0.3;
+  text-decoration-line: none;
+}
+.back-scroll a{
+  padding-bottom: 32px;
+}
+.back-scroll span {
+  font-size: 15px;
+  transform: rotate(90deg);
+}
+
+.section {
+  padding: 90px 0;
+}
+.section-container {
+  margin: 0 auto;
+  /* max-width: 100%; */
+  padding: 0 25px;
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) and (min-width: 1440px){
+  .section-container{
+    margin: 0 145px;
   }
 }
 
+@media only screen and (min-width: 1799px){
+  .section-container {
+    max-width: 1530px;
+}
+.left-content__img img,
+.right-content__img img{
+  width:672.98px;
+  height: 672.98px;;
+}
+.left-content__desc{
+  padding-right: 131px;
+}
+.left-content__desc p{
+  width: 672px;
+}
+}
+
+@media (min-width: 1439px) and (max-width:1798px){
+  .section-container{
+    max-width: 1410px;
+  }
+}
+
+@media (min-width:991px) and (max-width: 1438px){
+  .section-container{
+    max-width: 1000px;
+  }
+  .stat-container{
+    padding:0;
+  }
+  .stat-card__text{
+    font-size:15.75px;
+  }
+  .left-content__desc{
+    padding-right: 85px;
+  }
+  .left-content__desc p,
+  .right-content__desc p{
+    width:437px;
+    font-size: 15.75px;
+  }
+  .left-content__img img,
+  .right-content__img img{
+    width:438px;
+    height: auto;
+  }
+  .right-content__desc{
+    padding-left: 85px;
+  }
+  .quote-section{
+    padding:0 !important;
+    height: 376.98px;
+  }
+  .quote-content {
+    padding:45px;
+  }
+  .quote-container .quote-img img{
+    width: 380px;
+    height: 406.98px;
+    margin-top: -38px;
+  }
+  .quote-content p{
+    font-size:22.5px;
+    width:480px;
+  }
+  .footer-nav{
+    margin-top:36px;
+  }
+}
+
+@media (min-width: 767px) and (max-width:990px){
+  .section-container{
+    max-width: 770px;
+  }
+  /* .left-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+} */
+.left-content__desc {
+  padding-right: 0;
+}
+.left-content__desc p {
+  width: auto;
+  margin-bottom: 22.5px;
+}
+/* .left-content__img{
+  padding-top: 70px;
+} */
+.left-content__img img,
+.right-content__img img{
+  width:461.25px;
+  height: 461.25px;;
+}
+ /* .reversed{
+  display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+} */
+/* .right-content__desc {
+  padding-left: 0;
+} */
+.right-content__desc p {
+  width: auto;
+}
+/* .right-content__img{
+  padding-top: 70px;
+} */
+/* .right-content__img img{
+  width:461.25px;
+  height: 461.25px;;
+} */
+  .quote-container{
+    height: 440.83px;
+  }
+  .quote-content {
+    padding: 52px;
+    height: 440px;
+}
+.quote-content p {
+  font-size: 22.5px;
+  width: 330px;
+}
+  .quote-container .quote-img img{
+    width: 287.19px;
+    height: 307.58px;
+    margin-top: 133px;
+  }
+}
+
+@media (min-width:425px) and (max-width:766px){
+  .left-content__img img,
+  .right-content__img img{
+    width:384.38px;
+    height:384.38px;
+  }
+  /* .right-content__img img{
+    width:384.38px;
+    height:384.38px;
+  } */
+  .left-content__desc p,
+  .right-content__desc p {
+    width:375px;
+  }
+  .right-content__desc {
+    width: 375px;
+}
+.quote-section{
+  margin-top: 28px;
+}
+/* .quote-container{
+  flex-direction: column;
+} */
+.quote-container .quote-img img{
+  width:375px;
+  height: 401.63px;
+}
+/* .quote-content{
+  padding:35px;
+} */
+.quote-content p{
+  width:305px;
+  font-size: 22.5px;
+}
+.nav-list li:first-child{
+  padding-right: 81px;
+  border-bottom: 1px solid rgba(62,75,109,.1);
+}
+.nav-list li:nth-child(2){
+  padding-right: 81px;
+}
+/* .item-call{
+  padding-right: 58px;
+}
+.item-email{
+  padding-right: 58px;
+}  */
+.footer-contact{
+  flex-wrap: wrap;
+}
+.footer-contact__item{
+  flex-basis: 187px;
+}
+.footer-contact__item:first-child{
+  margin-bottom: 16px;
+}
+.back-scroll{
+  display: none;
+}
+}
+@media (min-width:375px) and (max-width:424px){
+  .left-content__desc p,
+  .right-content__desc p {
+    width:325px;
+  }
+  .left-content__img img,
+  .right-content__img img{
+    width:333.13px;
+    height:333.13px;
+  }
+  .quote-section{
+    margin-top:28px;
+    padding-bottom: 50px;
+  }
+  .quote-container .quote-img img {
+    width: 325px;
+    display: block;
+    height: 348.08px;
+    margin-top: -25px;
+}
+.quote-content p {
+  font-size: 22.5px;
+  width: 255px;
+}
+.nav-list li:first-child{
+  padding-right: 61px;
+  border-bottom: 1px solid rgba(62,75,109,.1);
+}
+.nav-list li:nth-child(2){
+  padding-right: 61px;
+}.footer-contact__item{
+  flex-basis: 187px;
+}
+.footer-contact{
+  flex-wrap: wrap;
+}
+.footer-contact__item{
+  flex-basis: 162px;
+}
+.footer-contact__item:first-child{
+  margin-bottom: 16px;
+}
+.phone-icon, .email-icon{
+  font-size: 16px;
+}
+.back-scroll{
+  display: none;
+}
+}
+
+/* Media query */
+@media (max-width: 1799px) {
+  .home-section__text h1 {
+    font-size: 56px;
+  }
+}
 @media (max-width: 1199px) {
   .header-top {
-    padding: 0 30px;
     height: 100px;
+    left: 0;
+    right: 0;
+    padding: 0 32px;
   }
   .header-top__logo {
     margin-right: 16px;
@@ -259,18 +748,27 @@ a {
   }
   .mobile-nav .mobile-nav__items a {
     color: #fff;
+    text-decoration: none;
   }
-  .hero-section__content {
-    margin: -200px 0 0 0;
+  .home-section__content {
+    margin: 0;
+    padding-left: 25px;
   }
-  .hero-section__text h1 {
+  .home-section__text h1 {
     font-size: 43px;
   }
-  .hero-section__text p {
+  .home-section__text p {
     font-size: 22px;
   }
 }
 @media (min-width: 1200px) {
+  .header-top{
+    right: 3.25rem;
+    left: 170px;
+  }
+  .header-top .navbar{
+    margin-left: 2rem;
+  }
   .header-top__logo {
     display: none;
   }
@@ -280,35 +778,40 @@ a {
   .header-top__toggle {
     display: none;
   }
+  .stat-content>:not(:last-child) {
+    border-right: 1px solid rgba(62,75,109,.1);
+}
 }
 @media (max-width: 767px) {
-  .mobile-nav  {
+  .mobile-nav {
     padding: 65% 0 0;
   }
   .header-top {
     padding: 0 25px;
     height: 90px;
-}
+  }
   .header-top__logo img {
     height: 40px;
   }
-.hero-section__text{
-  width: 300px;
-}
-  .hero-section__text h1 {
+  .home-section__text {
+    width: 300px;
+    /* padding: 0 20px; */
+  }
+  .home-section__text h1 {
     font-size: 37px;
   }
-  .hero-section__text p {
-    font-size: 19px;
+  .home-section__text p {
+    font-size: 19.5px;
+    width: 300px;
   }
-  .hero-section__logo {
+  .home-section__logo {
     margin-top: 16px;
   }
-  .mobile-nav__items li{
+  .mobile-nav__items li {
     font-size: 30px;
   }
   .header-sticky {
-    padding:0;
+    padding: 0;
     height: 90px;
   }
   .header-sticky__logo {
@@ -319,34 +822,77 @@ a {
   .header-sticky__logo a {
     margin-right: 0;
   }
-  .header-sticky img{
+  .header-sticky img {
     margin-right: 10px;
     height: auto;
   }
   .header-sticky__divider {
     display: none;
   }
-  .header-sticky .header-top__toggle{
+  .header-sticky .header-top__toggle {
     padding-right: 25px;
-  }  
+  }
+  .left-content__desc h2{
+    margin-bottom: 22.5px;
+  }
+  .quote-container{
+    flex-direction: column;
+  }
 }
 @media (min-width: 768px) and (max-width: 990px) {
-  .hero-section__content {
+  .home-section__content {
     width: 409px;
+    padding-left: 25px;
   }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
-  .mobile-nav{
-    padding:33% 0 0 150px;
+  .mobile-nav {
+    padding: 45% 0 0 150px;
   }
   .mobile-nav .mobile-nav__items li {
     font-size: 37px;
     letter-spacing: 1px;
   }
 }
-@media (min-width: 992px) and (max-width: 1500px){
-.hero-section__text{
-  width: 600px;
+@media (min-width: 992px) and (max-width: 1500px) {
+  .home-section__text {
+    width: 600px;
+  }
+}
+@media (max-width: 991px){
+  .section {
+    padding: 70px 0;
+}
+  .stat-card__content {
+    padding-bottom: 30px;
+    border-bottom: 1px solid rgba(62,75,109,.1);
+}
+.reversed{
+  display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+}
+.left-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.left-content__desc p {
+  font-size: 15.75px;
+  margin-bottom: 22.5px;
+}
+.left-content__img, 
+.right-content__img{
+  padding-top: 70px;
+}
+.right-content__desc {
+  padding-left: 0;
+}
+footer .footer-logo img{
+  height: 55px !important;
+}
+.footer-nav{
+  margin-top:36px;
 }
 }
 @media (max-width: 575px) {
@@ -356,33 +902,117 @@ a {
     padding: 0 25px;
     line-height: 1.3;
   }
+  .stat-card__content {
+    display: flex;
+    align-items: center;
+    margin-bottom:30px;
+}
+.stat-card__icon {
+  margin-right: 24px;
+  margin-bottom: 0;
+}
+.stat-card__icon span {
+   font-size: 40px;
+    display: block;
+}
+.stat-card__value {
+  font-size: 30px;
+}
+.stat-card__text {
+  font-size: 15.75px;
+  padding-top:0;
+}
+.stat-content .stat-card {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.nav-list{
+  font-size: 12px;
+}
+.quote-content{
+  padding:35px;
+}
 }
 @media (max-width: 374px) {
-  .hero-section__text p {
+  .home-section__text p {
     width: 270px;
   }
+  .left-content__desc p,
+  .right-content__desc p {
+    width:270px;
+    font-size:15.75px;
+  }
+  .left-content__img img,
+  .right-content__img img{
+    width:270px;
+    height:270px;
+  }
+  .quote-section{
+    margin-top:28px;
+    padding-bottom: 50px;
+  }
+  .quote-container .quote-img img{
+    width: 270px;
+    height: 289px;
+  }
+  .quote-content p{
+    width: 200px;
+    font-size: 22.5px;
+  }
+  .nav-list li:first-child{
+    padding-right: 21px;
+    border-bottom: 1px solid rgba(62,75,109,.1);
+  }
+  .nav-list li:nth-child(2){
+    padding-right: 61px;
+  }.footer-contact__item{
+    flex-basis: 187px;
+  }
+  .footer-contact{
+    flex-wrap: wrap;
+  }
+  .footer-contact__item{
+    flex-basis: 162px;
+  }
+  .footer-contact__item{
+    margin-bottom: 16px;
+  }
+  .item-icon{
+    font-size:13.5px;
+  }
+  .phone-icon, .email-icon{
+    font-size: 16px;
+  }
+  .back-scroll{
+    display: none;
+  }
 }
-@media (min-width: 425px) and (max-width: 767px){
-  .header-sticky img{
+@media (min-width: 425px) and (max-width: 767px) {
+  .header-sticky img {
     width: 136px;
   }
 }
-@media (min-width: 375px) and (max-width: 424px){
- .mobile-nav  {
-    padding: 75% 0 0;
+@media (min-width: 375px) and (max-width: 424px) {
+  .mobile-nav {
+    padding: 95% 0 0;
   }
   .mobile-nav .mobile-nav__items li {
     padding: 0 20px;
   }
-  .header-sticky img{
+  .header-sticky img {
     width: 113px;
   }
 }
 @media (max-width: 374px) {
-  .mobile-nav  {
-    padding: 78% 0 0;
+  .mobile-nav {
+    padding: 105% 0 0;
   }
-  .header-sticky img{
+  .header-sticky img {
     width: 90px;
+  }
+}
+@media (max-width: 1200px) {
+  .slide-content__header h2{
+    font-size:34.5px;
   }
 }
