--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ overflow-x:hidden;
   font-weight: 700;
   border: 2px solid #f72334;
   padding: 12px 25px 12px 30px;
-  max-width: 165px;
+  max-width: 167px;
   height: 48px;
 }
 .section__btn a {
@@ -226,7 +226,11 @@ overflow-x:hidden;
 /* statistic section */
 .stat-content {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+}
+.stat-content .stat-card{
+  flex-grow: 1;
+  flex-basis: 292px;
 }
 
 .stat-content .stat-card{
@@ -295,7 +299,7 @@ overflow-x:hidden;
 
 
 /* Quote section */
-.quote-section{
+.quote{
   margin-top:90px;
   background-color: #081535;
   padding: 0;
@@ -350,7 +354,7 @@ footer .footer-logo .pri{
   margin-top:38.4px;
   display: inline-block !important;
 }
-.nav-list{
+.footer-nav__list{
   display: flex;
   flex-wrap: wrap;
   font-weight: 700;
@@ -358,7 +362,7 @@ footer .footer-logo .pri{
   margin: 0;
   padding:0;
 }
-.nav-list li {
+.footer-nav__list li {
   padding:16px 0;
 }
 .footer-contact{
@@ -381,12 +385,21 @@ footer .footer-logo .pri{
 .back-scroll{
   position: absolute;
   right:3.25rem;
+  margin-top: -150px;
+  height: 200px;
+  font-size: 8px;
 }
 .back-scroll a{
   text-decoration: none;
+  color: #a9a9a9;
 }
+.back-scroll a:hover{
+  text-decoration: none;
+  color: #a9a9a9;
+}
+
 @media (min-width: 576px){
-  .nav-list li {
+  .footer-nav__list li {
     width: 238px;
 }
 .footer-contact__item{
@@ -415,7 +428,6 @@ footer .footer-logo .pri{
 }
 .section-container {
   margin: 0 auto;
-  /* max-width: 100%; */
   padding: 0 25px;
 }
 
@@ -426,8 +438,21 @@ footer .footer-logo .pri{
 }
 
 @media only screen and (min-width: 1799px){
-  .section-container {
+.section-container {
     max-width: 1530px;
+}
+.home-section__content{
+  margin: 0 200px 0 364px;
+}
+.home-section__text h1{
+  width: 900px;
+  font-size: 78px;
+}
+.left-content__desc p{
+  font-size: 17.6px;
+}
+.left-content__desc h2{
+  font-size: 48px;
 }
 .left-content__img img,
 .right-content__img img{
@@ -435,10 +460,27 @@ footer .footer-logo .pri{
   height: 672.98px;;
 }
 .left-content__desc{
-  padding-right: 131px;
+  padding-right: 207px;
 }
-.left-content__desc p{
+.right-content__desc{
+  padding-left: 207px;
+}
+.left-content__desc p,
+.right-content__desc p{
   width: 672px;
+}
+.quote-container .quote-img img{
+  width:592px;
+  height: 634px;
+}
+.quote-content p{
+  width: 758px;
+}
+.footer-nav__list li{
+  width: 320px;
+}
+.footer-contact__item{
+  width: 320px;
 }
 }
 
@@ -474,7 +516,7 @@ footer .footer-logo .pri{
   .right-content__desc{
     padding-left: 85px;
   }
-  .quote-section{
+  .quote{
     padding:0 !important;
     height: 376.98px;
   }
@@ -499,11 +541,26 @@ footer .footer-logo .pri{
   .section-container{
     max-width: 770px;
   }
-  /* .left-content {
+  .stat-content {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-} */
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .stat-content .stat-card{
+    flex-basis: 50%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .stat-card__content{
+    margin-bottom: 32px;
+  }
+  .stat-card__value{
+    font-size: 39px;
+  }
+  .stat-card__text{
+    font-size: 15.75px;
+  }
 .left-content__desc {
   padding-right: 0;
 }
@@ -511,32 +568,14 @@ footer .footer-logo .pri{
   width: auto;
   margin-bottom: 22.5px;
 }
-/* .left-content__img{
-  padding-top: 70px;
-} */
 .left-content__img img,
 .right-content__img img{
   width:461.25px;
   height: 461.25px;;
 }
- /* .reversed{
-  display: flex;
-    flex-direction: column-reverse;
-    align-items: flex-start;
-} */
-/* .right-content__desc {
-  padding-left: 0;
-} */
 .right-content__desc p {
   width: auto;
 }
-/* .right-content__img{
-  padding-top: 70px;
-} */
-/* .right-content__img img{
-  width:461.25px;
-  height: 461.25px;;
-} */
   .quote-container{
     height: 440.83px;
   }
@@ -561,10 +600,6 @@ footer .footer-logo .pri{
     width:384.38px;
     height:384.38px;
   }
-  /* .right-content__img img{
-    width:384.38px;
-    height:384.38px;
-  } */
   .left-content__desc p,
   .right-content__desc p {
     width:375px;
@@ -572,36 +607,24 @@ footer .footer-logo .pri{
   .right-content__desc {
     width: 375px;
 }
-.quote-section{
+.quote{
   margin-top: 28px;
 }
-/* .quote-container{
-  flex-direction: column;
-} */
 .quote-container .quote-img img{
   width:375px;
   height: 401.63px;
 }
-/* .quote-content{
-  padding:35px;
-} */
 .quote-content p{
   width:305px;
   font-size: 22.5px;
 }
-.nav-list li:first-child{
+.footer-nav__list li:first-child{
   padding-right: 81px;
   border-bottom: 1px solid rgba(62,75,109,.1);
 }
-.nav-list li:nth-child(2){
+.footer-nav__list li:nth-child(2){
   padding-right: 81px;
 }
-/* .item-call{
-  padding-right: 58px;
-}
-.item-email{
-  padding-right: 58px;
-}  */
 .footer-contact{
   flex-wrap: wrap;
 }
@@ -625,7 +648,7 @@ footer .footer-logo .pri{
     width:333.13px;
     height:333.13px;
   }
-  .quote-section{
+  .quote{
     margin-top:28px;
     padding-bottom: 50px;
   }
@@ -639,11 +662,11 @@ footer .footer-logo .pri{
   font-size: 22.5px;
   width: 255px;
 }
-.nav-list li:first-child{
+.footer-nav__list li:first-child{
   padding-right: 61px;
   border-bottom: 1px solid rgba(62,75,109,.1);
 }
-.nav-list li:nth-child(2){
+.footer-nav__list li:nth-child(2){
   padding-right: 61px;
 }.footer-contact__item{
   flex-basis: 187px;
@@ -902,6 +925,13 @@ footer .footer-logo img{
     padding: 0 25px;
     line-height: 1.3;
   }
+  .stat-content {
+    display: flex;
+    flex-direction: column;
+  }
+  .stat-content .stat-card{
+    flex-basis: 0;
+  }
   .stat-card__content {
     display: flex;
     align-items: center;
@@ -926,7 +956,7 @@ footer .footer-logo img{
   padding-left: 10px;
   padding-right: 10px;
 }
-.nav-list{
+.footer-nav__list{
   font-size: 12px;
 }
 .quote-content{
@@ -947,7 +977,7 @@ footer .footer-logo img{
     width:270px;
     height:270px;
   }
-  .quote-section{
+  .quote{
     margin-top:28px;
     padding-bottom: 50px;
   }
@@ -959,11 +989,11 @@ footer .footer-logo img{
     width: 200px;
     font-size: 22.5px;
   }
-  .nav-list li:first-child{
+  .footer-nav__list li:first-child{
     padding-right: 21px;
     border-bottom: 1px solid rgba(62,75,109,.1);
   }
-  .nav-list li:nth-child(2){
+  .footer-nav__list li:nth-child(2){
     padding-right: 61px;
   }.footer-contact__item{
     flex-basis: 187px;
